--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tolgee/react": "^4.8.0",
     "@types/node": "^18.7.6",
     "@types/react": "^18.0.17",
     "axios": "^0.27.2",
