--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.34.15",
+    "react-query-auth": "^1.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
